kubernetes/grafana/db/network-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: grafana-db
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: grafana
      app.kubernetes.io/component: database
  ingress:
  - fromEndpoints:
    - {}
  - fromEndpoints:
    - matchLabels:
        prometheus: k8s
        io.kubernetes.pod.namespace: monitoring
    toPorts:
    - ports:
      - port: "9187"
        protocol: TCP
  - fromEndpoints:
    - matchLabels:
        io.kubernetes.pod.namespace: cnpg-system
    toPorts:
    - ports:
      - port: "8000"
        protocol: TCP
  - fromEndpoints:
    - matchLabels:
        app.kubernetes.io/name: ingress-nginx
        app.kubernetes.io/component: controller
        io.cilium.k8s.namespace.labels.app.kubernetes.io/name: ingress-nginx
      matchExpressions:
      - key: io.kubernetes.pod.namespace
        operator: Exists
  egress:
  - toEntities:
    - kube-apiserver
  - toEndpoints:
    - {}
  - toEndpoints:
    - matchLabels:
        io.kubernetes.pod.namespace: kube-system
        k8s-app: kube-dns
    toPorts:
    - ports:
        - port: "53"
          protocol: UDP
      rules:
        dns:
          - matchPattern: "*"
  - toCIDRSet:
    - cidr: 169.254.25.10/32
    toPorts:
    - ports:
      - port: "53"
        protocol: UDP
      rules:
        dns:
        - matchPattern: "*"
